# cavegen-labs

./: .gitignore  CaveGenLabs.spec  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: docs.yml  release.yml
docs/: algorithms.md  contributing.md  documentation.md  index.md  license.md  quickstart.md
docs/stylesheets/: extra.css
src/cavegenlabs/: __main__.py  app.py
src/cavegenlabs/algorithms/binary_space_partition/: __init__.py  config.py  definition.py  generator.py  presentation.py
src/cavegenlabs/algorithms/cellular_automata/: __init__.py  config.py  definition.py  generator.py  presentation.py
src/cavegenlabs/algorithms/diffusion_limited_aggregation/: __init__.py  config.py  definition.py  generator.py  presentation.py
src/cavegenlabs/algorithms/metaballs/: __init__.py  config.py  definition.py  generator.py  presentation.py
src/cavegenlabs/algorithms/midpoint_displacement/: __init__.py  config.py  definition.py  generator.py  presentation.py
src/cavegenlabs/algorithms/perlin_worms/: __init__.py  config.py  definition.py  generator.py  presentation.py
src/cavegenlabs/algorithms/random_walk/: __init__.py  config.py  definition.py  generator.py  grid_position.py  presentation.py
src/cavegenlabs/application/: __init__.py  algorithm_registry.py  generation_result.py  generation_service.py
src/cavegenlabs/domain/models/: tile.py  (+2 more)
src/cavegenlabs/presentation/: generation_view_model.py  main_window.py
tests/unit/application/: test_algorithm_registry.py  test_generation_result.py  test_generation_service.py
(+22 files in other folders)
