[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "cavegen-labs"
version = "0.1.0"
description = "A modular desktop laboratory for procedural cave-generation algorithms."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Hector Salinas" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.14"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true